Refactor Deploy API